# Invoice-Generation-Service

./: .env.example  .gitignore  2025-11_forecast_requests.json  Future-Sales-Forecast_MCP_Spec.md  README.md  pyproject.toml  requirements.txt
config/: README.md  qwen_config.example.json
data/prepared/: _dataset_metadata.json  inventory.csv  products.csv  promotions.csv
data/raw/kaggle-synthetic-retail/: bm_inventory.csv
mcp_server/: __init__.py  server.py
mcp_server/resources/sample_payloads/: forecast_request.json  kaggle_validation_request.json  kaggle_validation_request.md
mcp_server/schemas/: forecast_request.schema.json  forecast_response.schema.json  invoice_request.schema.json  invoice_response.schema.json
mcp_server/services/: audit.py  feature_builder.py  model_loader.py  pricing.py  qwen_invoice_renderer.py  storage.py
mcp_server/tools/: __init__.py  forecast.py  health.py  invoice.py  metadata.py
models/: feature_manifest.json  model.pkl
reports/: metrics.json
scripts/: benchmark_mcp_server.py  generate_next_month_forecast.py
tests/: test_generate_next_month_forecast.py  test_service.py
tests/_tmp_kaggle_source/: inventory_snapshot.csv  promotions.csv  sales_transactions.csv  sku_master.csv  store_master.csv
tests/_tmp_kaggle_source_bm/: bm_inventory.csv  bm_promotions.csv  bm_sales.csv  bm_skus.csv  bm_stores.csv
tests/_tmp_qwen_config/config/: qwen_config.json
